--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,5 @@
     },
     "version": "1.0.0",
     "maintainer": "shapa <email@domain.org>",
-    "framework" : "@CLICK_FRAMEWORK@"
+    "framework" : "ubuntu-touch-24.04-1.x"
 }
